fixed weird behavior on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,6 +253,9 @@ footer h3 {
         font-size: 25px;
         padding: 5px;
     }
+    footer {
+        width: 100%;
+    }
 
     
 }
